[metadata]
name = py-qualis-capes
version = 0.0.1
author = AcademicAI
author_email = jcardoso@inf.puc-rio.br
description = Recupere informações sobre qualis-periódicos da Plataforma Sucupira.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/academicai/py-qualis-capes
project_urls =
    Bug Tracker = https://github.com/academicai/py-qualis-capes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests
    pandas
    lxml
    beautifulsoup4
    tqdm

[options.package_data]
* = data/*

[options.packages.find]
where = src